# wireframe-3d-test

./: .gitmodules  Makefile  README.md
components/quartz-gpu/: .gitignore  CMakeLists.txt  component.mk
components/quartz-gpu/fpga/: Makefile
components/quartz-gpu/fpga/src/: ili.v  mch2022_constr.pcf  top.v  top_dummy.v
components/quartz-gpu/src/: quartz.c  quartz.h  quartz_types.h
components/wf3d/: CMakeLists.txt
components/wf3d/src/: matrix3.c  matrix3.h  obj.c  obj.h  wf3d.c  wf3d.h
main/: CMakeLists.txt  main.c
